--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "webpack-dev-server --open",
     "build": "webpack",
+    "build:code": "webpack",
+    "build:docs": "esdoc",
     "test": "run-s -n test:*",
     "test:code": "ava",
-    "test:eslint": "eslint \"src/**\"",
-    "doc": "esdoc"
+    "test:eslint": "eslint \"src/**\""
   },
   "keywords": [],
   "author": "",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "ava": "^0.25.0",
+    "debounce": "^1.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
